--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: telas_projeto
+name: game_real_time
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -59,17 +59,6 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  fonts:
-    - family: Futura
-      fonts:
-        - asset: assets/fonts/FuturaPTBold.otf
-          weight: 700
-        - asset: assets/fonts/FuturaPTMedium.otf
-          weight: 500
-        - asset: assets/fonts/FuturaPTLight.otf
-          weight: 400
-        - asset: assets/fonts/FuturaPTBook.otf
-          weight: 400
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -85,6 +74,18 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-
+  # example:
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+  #   - family: Trajan Pro
+  #     fonts:
+  #       - asset: fonts/TrajanPro.ttf
+  #       - asset: fonts/TrajanPro_Bold.ttf
+  #         weight: 700
+  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
