--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^1.0.3
+  firebase_core: ^2.1.1
+  cloud_firestore: ^4.0.4
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
